Updated website marketing for SEO

--- a/digital-marketing/websitemarketing.html
+++ b/digital-marketing/websitemarketing.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-  <title>Website marketing strategies-Creafix Design</title>
+  <title>Website marketing services | Christchurch NZ-Creafix Design</title>
 
   <meta charset="UTF-8" />
   <meta name="description"
-    content="Creafix Design is able to advise on the best website marketing strategy when building or updating your website.">
+    content="Did you know you could tweak your website to increase your traffic? Click to learn how we can optimise your website for better reach.">
   <link rel="icon" href="../images/Icon%20small-min.png">
   <link href="../src/styles.css" rel="stylesheet" type="text/css" />
   <!-- CSS only -->
@@ -125,22 +125,27 @@
         <img src="../images/webmarketing.png" alt="Example of webpage presented on a laptop screen placed on a wooden table" class="service-image">
       </div>
       <div class="col">
-        <p class=" mb-1 bio">With website marketing you are leveraging you website as a tool to promote your products or offers. To bring more
-        traffic and potential customers to your website you want to maximise the opportunities potential customers have to find
-        you easily and fast. We can help you optimise your website to <a href="../web-development/seo.html">rank higher on search engines</a> to help you get in front of
-        your target audience.
-
-
-          </br>
+        <p class=" mb-1 bio">
+          With website marketing, you are leveraging your website as a tool, to promote your products or services online. For that
+          we carry out website design optimisation by looking at the ease of usability of the website, the quality of the content
+          and the clarity of the information displayed to the visitors. By optimising your images, making your website more
+          accessible and creating interesting content for your potential customer, you will in time increase your ranking on <a href="../web-development/seo.html">search engines</a> and increase your traffic. The more on target traffic your website receives the higher the potential of sales
+          conversion.
+          We can optimise your website to help you get in front of your <a href="./../digital-marketing/digitalstrategy.html">target audience</a>.          </br>
           We can help you with:
         </p>
         <p class=" mb-1">
         <ul>
           <li class="bio-list">◼ Google analytics</li>
-          <li class="bio-list">◼ Search engine optimisation (SEO)</li>
-          <li class="bio-list">◼ Website audit for optimisation</li>
-          <li class="bio-list">◼ Web funnel design to boost digital conversion rate</li>
+          <li class="bio-list">◼ <a href="./../web-development/seo.html">Search engine optimisation (SEO)</a></li>
+          <li class="bio-list">◼ <a href="./../web-development/websiteaudit.html">Website audit for optimisation</a></li>
+          <li class="bio-list">◼ <a href="digitalstrategy.html">Web funnel design to boost digital conversion rate</a></li>
           <li class="bio-list">◼ A/B testing</li>
+          <li class="bio-list">◼ Content and keyword review</li>
+          <li class="bio-list">◼ Usability testing</li>
+          <li class="bio-list">◼ Accessibility testing</li>
+          <li class="bio-list">◼ Content optimisation</li>
+
         </ul>
 
         </p>
