Updated SEO page

--- a/web-development/landingpages.html
+++ b/web-development/landingpages.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-  <title>Landing pages design-Creafix Design</title>
+  <title>Landing pages building services | Christchurch NZ-Creafix Design</title>
 
   <meta charset="UTF-8" />
   <meta name="description"
-    content="Creafix Design can help you design the best landing page to convert your visitor into viable customers.">
+    content="Are you running promotions or organising a special event? Building a landing page is likely the solution you are looking for, click to learn more.">
   <link rel="icon" href="../images/Icon%20small-min.png">
   <link href="../src/styles.css" rel="stylesheet" type="text/css" />
   <!-- CSS only -->
