--- a/web-development/seo.html
+++ b/web-development/seo.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-  <title>Search Engine Optimisation management-Creafix Design</title>
+  <title>SEO services | Christchurch NZ-Creafix Design</title>
 
   <meta charset="UTF-8" />
   <meta name="description"
-    content="Creafix Design can help you be more visible to your target market by improving your SEO ranking on Google.">
+    content="Are you struggling to understand how SEO works or don't have time to manage it? Click to learn how we can help out with your SEO.">
 <link rel="icon" href="../images/Icon%20small-min.png">
   <link href="../src/styles.css" rel="stylesheet" type="text/css" />
   <!-- CSS only -->
@@ -130,7 +130,7 @@
         will be, therefore increasing your chances of sales conversion.
         SEO is an ongoing process that requires monitoring and adjusting on a regular basis to keep you ranking as high as
         possible on the Google search pages. We can help you create the strategy to get your website visible for your chosen keywords and report on key
-        ranking parameters to adjust the strategy.
+        ranking parameters to adjust the strategy. 
 
 
           </br>
@@ -143,6 +143,8 @@
           <li class="bio-list">◼ Keyword selection and implementation</li>
           <li class="bio-list">◼ SEO strategy</li>
           <li class="bio-list">◼ SEO audits</li>
+          <li class="bio-list">◼ SEO competitor research</li>
+          
         </ul>
 
         </p>
