added internal link

--- a/web-development/seo.html
+++ b/web-development/seo.html
@@ -144,7 +144,8 @@
           <li class="bio-list">◼ SEO strategy</li>
           <li class="bio-list">◼ SEO audits</li>
           <li class="bio-list">◼ SEO competitor research</li>
-          
+          <li class="bio-list">◼ <a href="./../digital-marketing/websitemarketing.html">Keyword integration in website content</a></li>
+         
         </ul>
 
         </p>
