--- a/web-development/websiteaudit.html
+++ b/web-development/websiteaudit.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-  <title>Website audits|Optimisation program-Creafix Design</title>
+  <title>Website audit & performance checker| Christchurch NZ-Creafix Design</title>
 
   <meta charset="UTF-8" />
   <meta name="description"
-    content="Creafix Design can carry out an audit of your website and suggests option for improvement.">
+    content="Not sure if your website is performing as it should? Let us carry out an audit and create a checklist of potential improvements; click to learn more.">
   <link rel="icon" href="../images/Icon%20small-min.png">
   <link href="../src/styles.css" rel="stylesheet" type="text/css" />
   <!-- CSS only -->
@@ -127,17 +127,27 @@
           class="service-image">
       </div>
       <div class="col">
-        <p class=" mb-1 bio">Carrying out a performance test on your website allows you to identify the weakest points that might impact the
-        performance and/or the user experience. This is a great tool to help identify the areas of the website that needs
-        optimising to increase your engagement and overall <a href= "seo.html">SEO ranking</a>.
+        <p class=" mb-1 bio">
+          Carrying out a performance test on your website allows you to identify elements such as loading speed, page
+          accessibility and mobile friendliness that might impair the performance and/or user experience. This is what we use to
+          optimise the marketing ability of a web page as it helps us identify the areas of the website that needs tweaking to
+          increase your engagement and overall <a href="seo.html">SEO ranking</a>.
+                
+
           </br>
           We can help you with:
         </p>
         <p class=" mb-1">
         <ul>
           <li class="bio-list">◼ Complete website audit</li>
+          <li class="bio-list">◼ Google analytics review</li>
           <li class="bio-list">◼ SEO ranking audit</li>
           <li class="bio-list">◼ Create a plan to correct the areas of weaknesses</li>
+          <li class="bio-list">◼ <a href="./../digital-marketing/websitemarketing.html">Website optimisation</a></li>
+          <li class="bio-list">◼ <a href="./seo.html">SEO strategy recommendations</a></li>
+          <li class="bio-list">◼ <a href="./../digital-marketing/websitemarketing.html">Website usability and accessibility review</a></li>
+
+
         </ul>
 
         </p>
