updated my work title

--- a/mywork.html
+++ b/mywork.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-  <title>Previous projects-Creafix Design</title>
+  <title>Previous projects | Christchurch NZ-Creafix Design</title>
 
   <meta charset="UTF-8" />
   <meta name="description"
-    content="Creafix Design has worked on a lot of projects in the past, contact us to be part of our future.">
+    content="We've worked on a lot of projects in the past; click to check out what we've worked on previously.">
 <link rel="icon" href="images/Icon small-min.png">
   <link href="src/styles.css" rel="stylesheet" type="text/css" />
   <!-- CSS only -->
