--- a/web-development/webdesign.html
+++ b/web-development/webdesign.html
@@ -73,11 +73,11 @@
           Creative Services
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li><a class="dropdown-item" href="brandstrategy.html">Branding Strategy</a></li>
-          <li><a class="dropdown-item" href="logodesign.html">Logo Design</a></li>
-          <li><a class="dropdown-item" href="marketingcollateral.html">Marketing Material and
+          <li><a class="dropdown-item" href="../brandstrategy.html">Branding Strategy</a></li>
+          <li><a class="dropdown-item" href="../logodesign.html">Logo Design</a></li>
+          <li><a class="dropdown-item" href="../marketingcollateral.html">Marketing Material and
               Graphic Design</a></li>
-          <li><a class="dropdown-item" href="templates.html">Presentation and Proposal Templates</a>
+          <li><a class="dropdown-item" href="../templates.html">Presentation and Proposal Templates</a>
           </li>
         </ul>
       </li>
@@ -116,6 +116,7 @@
   
     </ul>
   </nav>
+
   <div class="title">
     <h1 class="title">Website Design & Development</h1>
   </div>
