--- a/creative-services/brandstrategy.html
+++ b/creative-services/brandstrategy.html
@@ -73,11 +73,11 @@
           Creative Services
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li><a class="dropdown-item" href="./../creative-services/brandstrategy.html">Branding Strategy</a></li>
-          <li><a class="dropdown-item" href="./../creative-services/logodesign.html">Logo Design</a></li>
-          <li><a class="dropdown-item" href="./../creative-services/marketingcollateral.html">Marketing Material and
+          <li><a class="dropdown-item" href="brandstrategy.html">Branding Strategy</a></li>
+          <li><a class="dropdown-item" href="logodesign.html">Logo Design</a></li>
+          <li><a class="dropdown-item" href="marketingcollateral.html">Marketing Material and
               Graphic Design</a></li>
-          <li><a class="dropdown-item" href="./../creative-services/templates.html">Presentation and Proposal Templates</a>
+          <li><a class="dropdown-item" href="templates.html">Presentation and Proposal Templates</a>
           </li>
         </ul>
       </li>
@@ -108,8 +108,8 @@
           <li><a class="dropdown-item" href="../web-development/websiteaudit.html">Website Audit</a></li>
         </ul>
       </li>
-      <li class="item"> <a href="../mywork.html" title="My Work">Work</a></li>
-<li class="item"> <a href="../about.html" title="About">About</a></li>
+      <li class="item"> <a href="../our-previous-work.html" title="My Work">Work</a></li>
+<li class="item"> <a href="../who-we-are.html" title="About">About</a></li>
       <li class="item"> <a href="index.html#contact" title="Contact me">Contact</a></li>
       <li class="toggle"> <span class="bars"></span></li>
 
@@ -151,7 +151,7 @@
   <li class="bio-list">◼ Signage</li>
   <li class="bio-list">◼ Advertisement design</li>
   <li class="bio-list">◼ Graphic design</li>
-  <li class="bio-list">◼ <a href="./../web-development/webdesign.html">Web design</a></li>
+  <li class="bio-list">◼ <a href="../web-development/webdesign.html">Web design</a></li>
   <li class="bio-list">◼ Presentation decks and proposal design</li>
 
 </ul>
