--- a/digital-marketing/digitalstrategy.html
+++ b/digital-marketing/digitalstrategy.html
@@ -73,11 +73,11 @@
         Creative Services
       </a>
       <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <li><a class="dropdown-item" href="./../creative-services/brandstrategy.html">Branding Strategy</a></li>
-        <li><a class="dropdown-item" href="./../creative-services/logodesign.html">Logo Design</a></li>
-        <li><a class="dropdown-item" href="./../creative-services/marketingcollateral.html">Marketing Material and
+        <li><a class="dropdown-item" href="../creative-services/brandstrategy.html">Branding Strategy</a></li>
+        <li><a class="dropdown-item" href="../creative-services/logodesign.html">Logo Design</a></li>
+        <li><a class="dropdown-item" href="../creative-services/marketingcollateral.html">Marketing Material and
             Graphic Design</a></li>
-        <li><a class="dropdown-item" href="./../creative-services/templates.html">Presentation and Proposal Templates</a>
+        <li><a class="dropdown-item" href="../creative-services/templates.html">Presentation and Proposal Templates</a>
         </li>
       </ul>
     </li>
@@ -87,12 +87,12 @@
         Digital Marketing
       </a>
       <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <li><a class="dropdown-item" href="../digital-marketing/digitalstrategy.html">Digital Marketing Strategy</a>
+        <li><a class="dropdown-item" href="digitalstrategy.html">Digital Marketing Strategy</a>
         </li>
-        <li><a class="dropdown-item" href="../digital-marketing/smmanagement.html">Social Media Management</a></li>
-        <li><a class="dropdown-item" href="../digital-marketing/websitemarketing.html">Website Marketing</a>
+        <li><a class="dropdown-item" href="smmanagement.html">Social Media Management</a></li>
+        <li><a class="dropdown-item" href="websitemarketing.html">Website Marketing</a>
         </li>
-        <li><a class="dropdown-item" href="../digital-marketing/emailmarketing.html">Email Marketing</a></li>
+        <li><a class="dropdown-item" href="emailmarketing.html">Email Marketing</a></li>
       </ul>
     </li>
     <li class="nav-item dropdown item">
@@ -108,8 +108,8 @@
         <li><a class="dropdown-item" href="../web-development/websiteaudit.html">Website Audit</a></li>
       </ul>
     </li>
-    <li class="item"> <a href="../mywork.html" title="My Work">Work</a></li>
-    <li class="item"> <a href="../about.html" title="About">About</a></li>
+    <li class="item"> <a href="../our-previous-work.html" title="My Work">Work</a></li>
+    <li class="item"> <a href="../who-we-are.html" title="About">About</a></li>
     <li class="item"> <a href="index.html#contact" title="Contact me">Contact</a></li>
     <li class="toggle"> <span class="bars"></span></li>
 
@@ -141,18 +141,18 @@
           <li class="bio-list">◼ Digital marketing strategy</li>
           <li class="bio-list">◼ Identify the best suitable marketing/advertising channels</li>
           <li class="bio-list">◼ Digital marketing assessment</li>
-          <li class="bio-list">◼ <a href="./../creative-services/brandstrategy.html">Buyer persona creation</a></li>
-          <li class="bio-list">◼ <a href="./../web-development/seo.html">Search Engine Optimisation (SEO)</a></li>
-          <li class="bio-list">◼ <a href="./smmanagement.html">Social Media Marketing (SMM)</a></li>
+          <li class="bio-list">◼ <a href="../creative-services/brandstrategy.html">Buyer persona creation</a></li>
+          <li class="bio-list">◼ <a href="../web-development/seo.html">Search Engine Optimisation (SEO)</a></li>
+          <li class="bio-list">◼ <a href="smmanagement.html">Social Media Marketing (SMM)</a></li>
           <li class="bio-list">◼ Build up your emails list</li>
           <li class="bio-list">◼ Lead magnet creation</li>
-          <li class="bio-list">◼ <a href="./../creative-services/brandstrategy.html">Create your customer journey</a></li>
+          <li class="bio-list">◼ <a href="../creative-services/brandstrategy.html">Create your customer journey</a></li>
           <li class="bio-list">◼ Create your ideal sales funnel that converts</li>
           <li class="bio-list">◼ Overall conversion rate optimisation</li>
           <li class="bio-list">◼ Digital advertising</li>
           <li class="bio-list">◼ Content Marketing</li>
-          <li class="bio-list">◼ <a href="./../web-development/landingpages.html">Website marketing and landing pages</a></li>
-          <li class="bio-list">◼ <a href="./emailmarketing.html">Email Marketing</a></li>
+          <li class="bio-list">◼ <a href="../web-development/landingpages.html">Website marketing and landing pages</a></li>
+          <li class="bio-list">◼ <a href="emailmarketing.html">Email Marketing</a></li>
           <li class="bio-list">◼ Downloadable content</li>
         </ul>
         </p>
