--- a/digital-marketing/emailmarketing.html
+++ b/digital-marketing/emailmarketing.html
@@ -73,11 +73,11 @@
           Creative Services
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li><a class="dropdown-item" href="./../creative-services/brandstrategy.html">Branding Strategy</a></li>
-          <li><a class="dropdown-item" href="./../creative-services/logodesign.html">Logo Design</a></li>
-          <li><a class="dropdown-item" href="./../creative-services/marketingcollateral.html">Marketing Material and
+          <li><a class="dropdown-item" href="../creative-services/brandstrategy.html">Branding Strategy</a></li>
+          <li><a class="dropdown-item" href="../creative-services/logodesign.html">Logo Design</a></li>
+          <li><a class="dropdown-item" href="../creative-services/marketingcollateral.html">Marketing Material and
               Graphic Design</a></li>
-          <li><a class="dropdown-item" href="./../creative-services/templates.html">Presentation and Proposal Templates</a>
+          <li><a class="dropdown-item" href="../creative-services/templates.html">Presentation and Proposal Templates</a>
           </li>
         </ul>
       </li>
@@ -87,12 +87,12 @@
           Digital Marketing
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li><a class="dropdown-item" href="../digital-marketing/digitalstrategy.html">Digital Marketing Strategy</a>
+          <li><a class="dropdown-item" href="digitalstrategy.html">Digital Marketing Strategy</a>
           </li>
-          <li><a class="dropdown-item" href="../digital-marketing/smmanagement.html">Social Media Management</a></li>
-          <li><a class="dropdown-item" href="../digital-marketing/websitemarketing.html">Website Marketing</a>
+          <li><a class="dropdown-item" href="smmanagement.html">Social Media Management</a></li>
+          <li><a class="dropdown-item" href="websitemarketing.html">Website Marketing</a>
           </li>
-          <li><a class="dropdown-item" href="../digital-marketing/emailmarketing.html">Email Marketing</a></li>
+          <li><a class="dropdown-item" href="emailmarketing.html">Email Marketing</a></li>
         </ul>
       </li>
       <li class="nav-item dropdown item">
@@ -108,8 +108,8 @@
           <li><a class="dropdown-item" href="../web-development/websiteaudit.html">Website Audit</a></li>
         </ul>
       </li>
-      <li class="item"> <a href="../mywork.html" title="My Work">Work</a></li>
-      <li class="item"> <a href="../about.html" title="About">About</a></li>
+      <li class="item"> <a href="../our-previous-work.html" title="My Work">Work</a></li>
+      <li class="item"> <a href="../who-we-are.html" title="About">About</a></li>
       <li class="item"> <a href="index.html#contact" title="Contact me">Contact</a></li>
       <li class="toggle"> <span class="bars"></span></li>
   
@@ -135,7 +135,7 @@
         goal is to bring your prospect back to your website to place an order or get in touch with you to purchase your
         services.<br/>
         We create email sequences that works together with your sales funnel to drive lead generations and overall sales. This
-        is part of our <a href="./digitalstrategy.html">digital marketing strategy</a> offering.
+        is part of our <a href="digitalstrategy.html">digital marketing strategy</a> offering.
         We can help you with:
         
         </br>
@@ -143,14 +143,14 @@
         </p>
         <p class=" mb-1">
         <ul>
-          <li class="bio-list">◼ <a href="./../web-development/landingpages.html">Landing pages to build your email list</a></li>
+          <li class="bio-list">◼ <a href="../web-development/landingpages.html">Landing pages to build your email list</a></li>
           <li class="bio-list">◼ Email campaign marketing</li>
           <li class="bio-list">◼ Newsletter creation</li>
           <li class="bio-list">◼ Email advertisement and design</li>
           <li class="bio-list">◼ Email sequence scheduling and strategy</li>
           <li class="bio-list">◼ Email marketing statistics to identify what works</li>
-          <li class="bio-list">◼ <a href="./digitalstrategy.html">Build your lead magnet</a></li>
-          <li class="bio-list">◼ <a href="./digitalstrategy.html">Create your ideal sales funnel</a></li>
+          <li class="bio-list">◼ <a href="digitalstrategy.html">Build your lead magnet</a></li>
+          <li class="bio-list">◼ <a href="digitalstrategy.html">Create your ideal sales funnel</a></li>
           <li class="bio-list">◼ CRM integrations</li>
           <li class="bio-list">◼ Email list management</li>
           <li class="bio-list">◼ Mailchimp campaigns</li>
