--- a/web-development/webdesign.html
+++ b/web-development/webdesign.html
@@ -73,11 +73,11 @@
           Creative Services
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li><a class="dropdown-item" href="./../creative-services/brandstrategy.html">Branding Strategy</a></li>
-          <li><a class="dropdown-item" href="./../creative-services/logodesign.html">Logo Design</a></li>
-          <li><a class="dropdown-item" href="./../creative-services/marketingcollateral.html">Marketing Material and
+          <li><a class="dropdown-item" href="../creative-services/brandstrategy.html">Branding Strategy</a></li>
+          <li><a class="dropdown-item" href="../creative-services/logodesign.html">Logo Design</a></li>
+          <li><a class="dropdown-item" href="../creative-services/marketingcollateral.html">Marketing Material and
               Graphic Design</a></li>
-          <li><a class="dropdown-item" href="./../creative-services/templates.html">Presentation and Proposal Templates</a>
+          <li><a class="dropdown-item" href="../creative-services/templates.html">Presentation and Proposal Templates</a>
           </li>
         </ul>
       </li>
@@ -101,15 +101,15 @@
           Web Development
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li><a class="dropdown-item" href="../web-development/webdesign.html">Web Design</a></li>
-          <li><a class="dropdown-item" href="../web-development/seo.html">Search Engine Optimisation (SEO)</a></li>
-          <li><a class="dropdown-item" href="../web-development/landingpages.html">Landing Pages</a>
+          <li><a class="dropdown-item" href="webdesign.html">Web Design</a></li>
+          <li><a class="dropdown-item" href="seo.html">Search Engine Optimisation (SEO)</a></li>
+          <li><a class="dropdown-item" href="landingpages.html">Landing Pages</a>
           </li>
-          <li><a class="dropdown-item" href="../web-development/websiteaudit.html">Website Audit</a></li>
+          <li><a class="dropdown-item" href="websiteaudit.html">Website Audit</a></li>
         </ul>
       </li>
-      <li class="item"> <a href="../mywork.html" title="My Work">Work</a></li>
-      <li class="item"> <a href="../about.html" title="About">About</a></li>
+      <li class="item"> <a href="../our-previous-work.html" title="My Work">Work</a></li>
+      <li class="item"> <a href="../who-we-are.html" title="About">About</a></li>
       <li class="item"> <a href="index.html#contact" title="Contact me">Contact</a></li>
       <li class="toggle"> <span class="bars"></span></li>
   
@@ -163,7 +163,7 @@
           <li class="bio-list">◼ Integrations with different apps</li>
           <li class="bio-list">◼ Website testing</li>
           <li class="bio-list">◼ Website usability and accessibility review</li>
-          <li class="bio-list">◼ <a href="./landingpages.html">Custom code landing pages</a></li>
+          <li class="bio-list">◼ <a href="landingpages.html">Custom code landing pages</a></li>
 
         </ul>
   
