--- a/creative-services/marketingcollateral.html
+++ b/creative-services/marketingcollateral.html
@@ -73,11 +73,11 @@
           Creative Services
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li><a class="dropdown-item" href="./../creative-services/brandstrategy.html">Branding Strategy</a></li>
-          <li><a class="dropdown-item" href="./../creative-services/logodesign.html">Logo Design</a></li>
-          <li><a class="dropdown-item" href="./../creative-services/marketingcollateral.html">Marketing Material and
+          <li><a class="dropdown-item" href="brandstrategy.html">Branding Strategy</a></li>
+          <li><a class="dropdown-item" href="logodesign.html">Logo Design</a></li>
+          <li><a class="dropdown-item" href="marketingcollateral.html">Marketing Material and
               Graphic Design</a></li>
-          <li><a class="dropdown-item" href="./../creative-services/templates.html">Presentation and Proposal Templates</a>
+          <li><a class="dropdown-item" href="templates.html">Presentation and Proposal Templates</a>
           </li>
         </ul>
       </li>
@@ -108,8 +108,8 @@
           <li><a class="dropdown-item" href="../web-development/websiteaudit.html">Website Audit</a></li>
         </ul>
       </li>
-      <li class="item"> <a href="../mywork.html" title="My Work">Work</a></li>
-      <li class="item"> <a href="../about.html" title="About">About</a></li>
+      <li class="item"> <a href="../our-previous-work.html" title="My Work">Work</a></li>
+      <li class="item"> <a href="../who-we-are.html" title="About">About</a></li>
       <li class="item"> <a href="index.html#contact" title="Contact me">Contact</a></li>
       <li class="toggle"> <span class="bars"></span></li>
   
@@ -129,7 +129,7 @@
         <p class=" mb-1 bio">Well-crafted marketing material can help you catch the attention of your potential customers. This material can vary
         largely depending on your marketing objectives; it could be a simple effective advertising flyer to a complete product
         advertising catalogue.
-        It is important to know who your audience is before creating advertising material. We can help you put together a <a href="./brandstrategy.html">branding</a> and <a href="./../digital-marketing/digitalstrategy.html">marketing strategy</a> that will make sure
+        It is important to know who your audience is before creating advertising material. We can help you put together a <a href="brandstrategy.html">branding</a> and <a href="../digital-marketing/digitalstrategy.html">marketing strategy</a> that will make sure
         that each piece is targeting the right customers. To help convince your customers to buy your product, we can help you
         build trust by creating with you the marketing collateral that will set you as an authority in your industry.
           
@@ -138,8 +138,8 @@
         </p>
         <p class=" mb-1">
         <ul>
-          <li class="bio-list">◼ <a href="./brandstrategy.html">Identify your target customers</a></li>
-          <li class="bio-list">◼ <a href="./brandstrategy.html">Research and build customer persona</a></li>
+          <li class="bio-list">◼ <a href="brandstrategy.html">Identify your target customers</a></li>
+          <li class="bio-list">◼ <a href="brandstrategy.html">Research and build customer persona</a></li>
           <li class="bio-list">◼ Brochure design</li>
           <li class="bio-list">◼ Product catalogue design</li>
           <li class="bio-list">◼ Postcards and thank you cards</li>
@@ -154,9 +154,9 @@
           <li class="bio-list">◼ Sign and flag design</li>
           <li class="bio-list">◼ Apparel and uniform branding</li>
           <li class="bio-list">◼ Newsletter and blog posts template</li>
-          <li class="bio-list">◼ <a href="./templates.html">Case studies template</a></li>
+          <li class="bio-list">◼ <a href="templates.html">Case studies template</a></li>
           <li class="bio-list">◼ Testimonial and video explainer script and design</li>
-          <li class="bio-list">◼ <a href="./../web-development/landingpages.html">Landing page design</a></li>
+          <li class="bio-list">◼ <a href="../web-development/landingpages.html">Landing page design</a></li>
         </ul>
 
         </p>
