--- a/creative-services/templates.html
+++ b/creative-services/templates.html
@@ -73,11 +73,11 @@
         Creative Services
       </a>
       <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <li><a class="dropdown-item" href="./../creative-services/brandstrategy.html">Branding Strategy</a></li>
-        <li><a class="dropdown-item" href="./../creative-services/logodesign.html">Logo Design</a></li>
-        <li><a class="dropdown-item" href="./../creative-services/marketingcollateral.html">Marketing Material and
+        <li><a class="dropdown-item" href="brandstrategy.html">Branding Strategy</a></li>
+        <li><a class="dropdown-item" href="logodesign.html">Logo Design</a></li>
+        <li><a class="dropdown-item" href="marketingcollateral.html">Marketing Material and
             Graphic Design</a></li>
-        <li><a class="dropdown-item" href="./../creative-services/templates.html">Presentation and Proposal Templates</a>
+        <li><a class="dropdown-item" href="templates.html">Presentation and Proposal Templates</a>
         </li>
       </ul>
     </li>
@@ -108,8 +108,8 @@
         <li><a class="dropdown-item" href="../web-development/websiteaudit.html">Website Audit</a></li>
       </ul>
     </li>
-    <li class="item"> <a href="../mywork.html" title="My Work">Work</a></li>
-    <li class="item"> <a href="../about.html" title="About">About</a></li>
+    <li class="item"> <a href="../our-previous-work.html" title="My Work">Work</a></li>
+    <li class="item"> <a href="../who-we-are.html" title="About">About</a></li>
     <li class="item"> <a href="index.html#contact" title="Contact me">Contact</a></li>
     <li class="toggle"> <span class="bars"></span></li>
 
@@ -148,7 +148,7 @@
           <li class="bio-list">◼ Internal document template</li>
           <li class="bio-list">◼ Email formatting template</li>
           <li class="bio-list">◼ Client report template</li>
-          <li class="bio-list">◼ <a href="./marketingcollateral.html">Graphic design</a></li>
+          <li class="bio-list">◼ <a href="marketingcollateral.html">Graphic design</a></li>
           <li class="bio-list">◼ General formatting help on Microsoft Word or Google Docs</li>
 
 
