--- a/digital-marketing/smmanagement.html
+++ b/digital-marketing/smmanagement.html
@@ -73,11 +73,11 @@
           Creative Services
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li><a class="dropdown-item" href="./../creative-services/brandstrategy.html">Branding Strategy</a></li>
-          <li><a class="dropdown-item" href="./../creative-services/logodesign.html">Logo Design</a></li>
-          <li><a class="dropdown-item" href="./../creative-services/marketingcollateral.html">Marketing Material and
+          <li><a class="dropdown-item" href="../creative-services/brandstrategy.html">Branding Strategy</a></li>
+          <li><a class="dropdown-item" href="../creative-services/logodesign.html">Logo Design</a></li>
+          <li><a class="dropdown-item" href="../creative-services/marketingcollateral.html">Marketing Material and
               Graphic Design</a></li>
-          <li><a class="dropdown-item" href="./../creative-services/templates.html">Presentation and Proposal Templates</a>
+          <li><a class="dropdown-item" href="../creative-services/templates.html">Presentation and Proposal Templates</a>
           </li>
         </ul>
       </li>
@@ -87,12 +87,12 @@
           Digital Marketing
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li><a class="dropdown-item" href="../digital-marketing/digitalstrategy.html">Digital Marketing Strategy</a>
+          <li><a class="dropdown-item" href="digitalstrategy.html">Digital Marketing Strategy</a>
           </li>
-          <li><a class="dropdown-item" href="../digital-marketing/smmanagement.html">Social Media Management</a></li>
-          <li><a class="dropdown-item" href="../digital-marketing/websitemarketing.html">Website Marketing</a>
+          <li><a class="dropdown-item" href="smmanagement.html">Social Media Management</a></li>
+          <li><a class="dropdown-item" href="websitemarketing.html">Website Marketing</a>
           </li>
-          <li><a class="dropdown-item" href="../digital-marketing/emailmarketing.html">Email Marketing</a></li>
+          <li><a class="dropdown-item" href="emailmarketing.html">Email Marketing</a></li>
         </ul>
       </li>
       <li class="nav-item dropdown item">
@@ -108,8 +108,8 @@
           <li><a class="dropdown-item" href="../web-development/websiteaudit.html">Website Audit</a></li>
         </ul>
       </li>
-      <li class="item"> <a href="../mywork.html" title="My Work">Work</a></li>
-      <li class="item"> <a href="../about.html" title="About">About</a></li>
+      <li class="item"> <a href="../our-previous-work.html" title="My Work">Work</a></li>
+      <li class="item"> <a href="../who-we-are.html" title="About">About</a></li>
       <li class="item"> <a href="index.html#contact" title="Contact me">Contact</a></li>
       <li class="toggle"> <span class="bars"></span></li>
   
@@ -157,8 +157,8 @@
           <li class="bio-list">◼ Setup of Facebook business page</li>
           <li class="bio-list">◼ Setup of LinkedIn business page</li>
           <li class="bio-list">◼ Social media posting schedule</li>
-          <li class="bio-list">◼ <a href="./../creative-services/marketingcollateral.html">Content creation</a></li>
-          <li class="bio-list">◼ <a href="./../creative-services/marketingcollateral.html">Creation of graphics or material to publish</a></li>
+          <li class="bio-list">◼ <a href="../creative-services/marketingcollateral.html">Content creation</a></li>
+          <li class="bio-list">◼ <a href="../creative-services/marketingcollateral.html">Creation of graphics or material to publish</a></li>
 
         </ul>
 
