--- a/digital-marketing/websitemarketing.html
+++ b/digital-marketing/websitemarketing.html
@@ -73,11 +73,11 @@
         Creative Services
       </a>
       <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <li><a class="dropdown-item" href="./../creative-services/brandstrategy.html">Branding Strategy</a></li>
-        <li><a class="dropdown-item" href="./../creative-services/logodesign.html">Logo Design</a></li>
-        <li><a class="dropdown-item" href="./../creative-services/marketingcollateral.html">Marketing Material and
+        <li><a class="dropdown-item" href="../creative-services/brandstrategy.html">Branding Strategy</a></li>
+        <li><a class="dropdown-item" href="../creative-services/logodesign.html">Logo Design</a></li>
+        <li><a class="dropdown-item" href="../creative-services/marketingcollateral.html">Marketing Material and
             Graphic Design</a></li>
-        <li><a class="dropdown-item" href="./../creative-services/templates.html">Presentation and Proposal Templates</a>
+        <li><a class="dropdown-item" href="../creative-services/templates.html">Presentation and Proposal Templates</a>
         </li>
       </ul>
     </li>
@@ -87,12 +87,12 @@
         Digital Marketing
       </a>
       <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <li><a class="dropdown-item" href="../digital-marketing/digitalstrategy.html">Digital Marketing Strategy</a>
+        <li><a class="dropdown-item" href="digitalstrategy.html">Digital Marketing Strategy</a>
         </li>
-        <li><a class="dropdown-item" href="../digital-marketing/smmanagement.html">Social Media Management</a></li>
-        <li><a class="dropdown-item" href="../digital-marketing/websitemarketing.html">Website Marketing</a>
+        <li><a class="dropdown-item" href="smmanagement.html">Social Media Management</a></li>
+        <li><a class="dropdown-item" href="websitemarketing.html">Website Marketing</a>
         </li>
-        <li><a class="dropdown-item" href="../digital-marketing/emailmarketing.html">Email Marketing</a></li>
+        <li><a class="dropdown-item" href="emailmarketing.html">Email Marketing</a></li>
       </ul>
     </li>
     <li class="nav-item dropdown item">
@@ -108,8 +108,8 @@
         <li><a class="dropdown-item" href="../web-development/websiteaudit.html">Website Audit</a></li>
       </ul>
     </li>
-    <li class="item"> <a href="../mywork.html" title="My Work">Work</a></li>
-    <li class="item"> <a href="../about.html" title="About">About</a></li>
+    <li class="item"> <a href="../our-previous-work.html" title="My Work">Work</a></li>
+    <li class="item"> <a href="../who-we-are.html" title="About">About</a></li>
     <li class="item"> <a href="index.html#contact" title="Contact me">Contact</a></li>
     <li class="toggle"> <span class="bars"></span></li>
 
@@ -131,14 +131,14 @@
           and the clarity of the information displayed to the visitors. By optimising your images, making your website more
           accessible and creating interesting content for your potential customer, you will in time increase your ranking on <a href="../web-development/seo.html">search engines</a> and increase your traffic. The more on target traffic your website receives the higher the potential of sales
           conversion.
-          We can optimise your website to help you get in front of your <a href="./../digital-marketing/digitalstrategy.html">target audience</a>.          </br>
+          We can optimise your website to help you get in front of your <a href="digitalstrategy.html">target audience</a>.          </br>
           We can help you with:
         </p>
         <p class=" mb-1">
         <ul>
           <li class="bio-list">◼ Google analytics</li>
-          <li class="bio-list">◼ <a href="./../web-development/seo.html">Search engine optimisation (SEO)</a></li>
-          <li class="bio-list">◼ <a href="./../web-development/websiteaudit.html">Website audit for optimisation</a></li>
+          <li class="bio-list">◼ <a href="../web-development/seo.html">Search engine optimisation (SEO)</a></li>
+          <li class="bio-list">◼ <a href="../web-development/websiteaudit.html">Website audit for optimisation</a></li>
           <li class="bio-list">◼ <a href="digitalstrategy.html">Web funnel design to boost digital conversion rate</a></li>
           <li class="bio-list">◼ A/B testing</li>
           <li class="bio-list">◼ Content and keyword review</li>
